# smartsettings

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: 404.html  index.html  search.html
docs/api/: index.html
docs/search/: search_index.json
examples/: dictionary_settings.py  encrypted_settings_file.py  json_settings_file.py  settings_update.py  subclass_smartsettings.py  use_smartsettings_directly.py  with_encryption.py
md_docs/: api.md
smartsettings/: __init__.py  smartsettings.py
tests/: test_smartsettings.py
