[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsettings"
version = "0.2.0"
description = "Smart Settings"
readme = "README.md"
authors = [{ name = "Quan Lin", email = "jacklinquan@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["json", "settings"]
dependencies = [
    "jsonpickle",
    "cryptomsg",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "pytest"]

[project.urls]
Homepage = "https://github.com/jacklinquan/smartsettings"
